--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,8 +103,9 @@ services:
       - "4566:4566"
       - "4571:4571"
     environment:
-      - SERVICES=sqs
+      - SERVICES=sqs,sns
       - DEBUG=1
+      - AWS_DEFAULT_REGION=us-east-1
     volumes:
       - localstack_data:/var/lib/localstack
     networks:
