--- a/fund/PensionFund.Api/appsettings.json
+++ b/fund/PensionFund.Api/appsettings.json
@@ -3,12 +3,13 @@
     "DefaultConnection": "Data Source=localhost;Initial Catalog=clients;User Id=sa;Password=Temporal1;Connection Timeout=360;TrustServerCertificate=True"
   },
   "StorageDb": {
-    "ServiceURL": "http://dynamodb:8000",
+    "ServiceURL": "http://localhost:8000",
     "Region": "us-east-1",
     "AccessKeyId": "fakeMyKeyId",
     "SecretAccessKey": "fakeSecretAccessKey"
   },
   "MessagingSettings": {
+    "ServiceURL": "http://localhost:4566",
     "Region": "us-east-1",
     "AccessKey": "fakeMyKeyId",
     "SecretKey": "fakeSecretAccessKey"
