--- a/fund/PensionFund.Api/PensionFund.Api.csproj
+++ b/fund/PensionFund.Api/PensionFund.Api.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.6.0" />
 		<PackageReference Include="AutoFixture" Version="4.18.1" />
 		<PackageReference Include="AutoMapper" Version="14.0.0" />
 		<PackageReference Include="Bogus" Version="35.6.2" />
